# app-relay

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  swavan-remote.md
.github/workflows/: ci.yml
apps/client-tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/client-tauri/scripts/: check-beta-release-notes.mjs  check-beta-release-notes.test.mjs  check-beta-security-review-manifest.mjs  check-beta-security-review-manifest.test.mjs  check-ci-workflow.mjs  check-ci-workflow.test.mjs  check-dependency-audit-evidence-manifest.mjs  check-dependency-audit-evidence-manifest.test.mjs  check-lifecycle-evidence-manifest.mjs  check-lifecycle-evidence-manifest.test.mjs  check-release-artifact-manifest.mjs  check-release-artifact-manifest.test.mjs  check-tauri-package.mjs
apps/client-tauri/src/: App.svelte  VideoRenderer.svelte  appViewModel.test.ts  appViewModel.ts  applicationPermissions.test.ts  applicationPermissions.ts  audioStreams.ts  connectionProfiles.test.ts  connectionProfiles.ts  inputForwarding.test.ts  inputForwarding.ts  main.ts  mobileConnection.test.ts  mobileConnection.ts  services.test.ts  services.ts  tauriRemoteService.test.ts  theme.css  videoRenderer.test.ts  videoRenderer.ts  videoStreams.ts  webrtcClient.test.ts  webrtcClient.ts  webrtcVideoSession.test.ts  webrtcVideoSession.ts
apps/client-tauri/src-tauri/: Cargo.toml  packaging-permissions.json  tauri.conf.json
apps/client-tauri/src-tauri/capabilities/: default.json
apps/client-tauri/src-tauri/icons/: icon.icns
apps/client-tauri/src-tauri/src/: audio_stream.rs  lib.rs  main.rs  signaling.rs  video_stream.rs
crates/core/: Cargo.toml
crates/core/src/: audio_stream.rs  input.rs  lib.rs  macos_screencapturekit.rs  macos_videotoolbox.rs  signaling.rs  str0m_webrtc_peer.rs  video_encoder.rs  video_stream.rs  webrtc_peer.rs  webrtc_transport.rs
crates/core/tests/: macos_screencapturekit.rs  macos_videotoolbox.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: audio_stream.rs  input.rs  lib.rs  signaling.rs  video_stream.rs  webrtc_peer.rs
crates/server/: Cargo.toml
crates/server/src/: audio_stream.rs  lib.rs  main.rs  signaling.rs  video_stream.rs
crates/server/tests/: control_plane.rs  health.rs  webrtc_udp.rs
docs/: architecture.md  audio-release-checklist.md  audit-logging.md  beta-feedback-process.md  beta-readiness-checklist.md  beta-release-notes-template.md  beta-security-review-manifest.template.json  client-packaging-checks.md  control-plane.md  daemon-lifecycle.md  dependency-audit-evidence-manifest.template.json  dependency-audit-policy.md  install-upgrade-rollback-runbook.md  lifecycle-evidence-manifest.template.json  mac-to-mac-demo.md  mobile-client-test-server.md  network-tunnel-guidance.md  platform-support-matrix.md  release-artifact-manifest.template.json  roadmap.md  signed-release-artifact-policy.md  threat-model.md
