[package]
name = "apprelay-core"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[features]
default = []
pipewire-capture = []
macos-screencapturekit = ["dep:screencapturekit", "dep:core-foundation", "dep:core-graphics"]
# Opt-in macOS hardware H.264 encoder backed by VideoToolbox.framework.
# Default builds and CI never enable this; when both this feature and
# `macos-screencapturekit` are enabled, captured `CMSampleBuffer`s feed
# the encoder and the resulting H.264 payload flows through
# `EncodedVideoFrame.payload`.
macos-videotoolbox = ["dep:core-foundation"]

[dependencies]
apprelay-protocol = { path = "../protocol" }
plist = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "0.3", optional = true }
core-foundation = { version = "0.10", optional = true }
core-graphics = { version = "0.24", optional = true }

[lib]
path = "src/lib.rs"
