[package]
name = "apprelay-core"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[features]
default = []
pipewire-capture = []
macos-screencapturekit = ["dep:screencapturekit", "dep:core-foundation", "dep:core-graphics"]
# Opt-in macOS hardware H.264 encoder backed by VideoToolbox.framework.
# Default builds and CI never enable this; when both this feature and
# `macos-screencapturekit` are enabled, captured `CMSampleBuffer`s feed
# the encoder and the resulting H.264 payload flows through
# `EncodedVideoFrame.payload`.
macos-videotoolbox = ["dep:core-foundation"]
# Opt-in server-side WebRTC peer scaffold (Phase D.0). The feature is
# currently a gate with no payload — no `str0m` or other crypto/SCTP/
# SRTP/ICE crate is pulled in yet. Phase D.1 will expand the
# `[dependencies]` block in the same change as the real integration
# and update `dependency-audit-policy.md` accordingly. With the
# feature enabled, `Str0mWebRtcPeer` (a placeholder that returns
# `ServiceUnavailable("Phase D.1 pending: ...")` from every
# state-changing operation) replaces the in-memory no-op default.
webrtc-peer = []

[dependencies]
apprelay-protocol = { path = "../protocol" }
plist = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "0.3", optional = true }
core-foundation = { version = "0.10", optional = true }
core-graphics = { version = "0.24", optional = true }

[lib]
path = "src/lib.rs"
