[package]
name = "apprelay-core"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[features]
default = []
pipewire-capture = []
macos-screencapturekit = ["dep:screencapturekit", "dep:core-foundation", "dep:core-graphics"]
# Opt-in macOS hardware H.264 encoder backed by VideoToolbox.framework.
# Default builds and CI never enable this; when both this feature and
# `macos-screencapturekit` are enabled, captured `CMSampleBuffer`s feed
# the encoder and the resulting H.264 payload flows through
# `EncodedVideoFrame.payload`.
macos-videotoolbox = ["dep:core-foundation"]
# Opt-in server-side WebRTC peer (Phase D.1.0). With the feature on,
# `Str0mWebRtcPeer` swaps in a real `str0m` (sans-IO) peer that drives
# SDP/ICE negotiation through Phase C `SignalingEnvelope`s, packetizes
# encoded H.264 payloads into RTP, and surfaces outbound datagrams via
# `take_outbound_rtp`. The peer is still NOT wired into the server
# stream lifecycle (Phase D.1.1) and there is no UDP transport yet
# (Phase D.1.2); default builds remain on the in-memory no-op peer.
webrtc-peer = ["dep:str0m"]

[dependencies]
apprelay-protocol = { path = "../protocol" }
plist = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
str0m = { version = "0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "0.3", optional = true }
core-foundation = { version = "0.10", optional = true }
core-graphics = { version = "0.24", optional = true }

[lib]
path = "src/lib.rs"
