[package]
name = "apprelay-server"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
apprelay-core = { path = "../core" }
apprelay-protocol = { path = "../protocol" }

[features]
default = []
pipewire-capture = ["apprelay-core/pipewire-capture"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "apprelay-server"
path = "src/main.rs"
