[package]
name = "apprelay-server"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
apprelay-core = { path = "../core" }
apprelay-protocol = { path = "../protocol" }
base64 = "0.22"

[features]
default = []
pipewire-capture = ["apprelay-core/pipewire-capture"]
macos-screencapturekit = ["apprelay-core/macos-screencapturekit"]
macos-videotoolbox = ["apprelay-core/macos-videotoolbox"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "apprelay-server"
path = "src/main.rs"
