[package]
name = "apprelay-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "apprelay_client"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
apprelay-core = { path = "../../../crates/core" }
apprelay-protocol = { path = "../../../crates/protocol" }
apprelay-server = { path = "../../../crates/server" }
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
